RESOLVED FIXED124490
REGRESSION(r159351): It made zillion tests assert on !CF platforms
https://bugs.webkit.org/show_bug.cgi?id=124490
Summary REGRESSION(r159351): It made zillion tests assert on !CF platforms
Csaba Osztrogonác
Reported 2013-11-18 03:10:38 PST
https://trac.webkit.org/changeset/159351 See the GTK Debug bot for details: http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Debug%20WK1/builds/5414 ASSERTION FAILED: m_currentDelayedReleaseScope ../../Source/JavaScriptCore/heap/MarkedSpace.cpp(123) : void JSC::MarkedSpace::sweep() I think it isn't a valid assertion on !CF platforms, because m_currentDelayedReleaseScope is only set inside CF guard.
Attachments
Patch (1.23 KB, patch)
2013-11-18 03:18 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2013-11-18 03:13:25 PST
I propose guarding this assertion with #if USE(CF). Patch is coming soon.
Csaba Osztrogonác
Comment 2 2013-11-18 03:18:36 PST
WebKit Commit Bot
Comment 3 2013-11-18 08:33:00 PST
Comment on attachment 217187 [details] Patch Clearing flags on attachment: 217187 Committed r159423: <http://trac.webkit.org/changeset/159423>
WebKit Commit Bot
Comment 4 2013-11-18 08:33:03 PST
All reviewed patches have been landed. Closing bug.
Mark Hahnenberg
Comment 5 2013-11-18 09:20:31 PST
(In reply to comment #2) > Created an attachment (id=217187) [details] > Patch Thanks for the fix! :-)
Note You need to log in before you can comment on or make changes to this bug.