REGRESSION(r159351): It made zillion tests assert on !CF platforms https://bugs.webkit.org/show_bug.cgi?id=124490

Reviewed by Mark Hahnenberg.

* heap/MarkedSpace.cpp:
(JSC::MarkedSpace::sweep):


Canonical link: https://commits.webkit.org/142690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159423 268f45cc-cd09-0410-ab3c-d52691b4dbfc