Source/JavaScriptCore/heap/MarkedSpace.cpp
@@ -120,7 +120,9 @@ void MarkedSpace::lastChanceToFinalize()
 
 void MarkedSpace::sweep()
 {
+#if USE(CF)
     ASSERT(m_currentDelayedReleaseScope);
+#endif
     m_heap->sweeper()->willFinishSweeping();
     forEachBlock<Sweep>();
 }
